added spring.jpa.show-sql=true, used .toList() in ProductController